--- a/tttweb/templates/base.html
+++ b/tttweb/templates/base.html
@@ -1,10 +1,14 @@
-{% load cms_tags menu_tags sekizai_tags %}
+{% load cms_tags menu_tags sekizai_tags static %}
 <!doctype html>
 <html>
     <head>
         <title>{% block title %}This is my new project home page{% endblock title %}</title>
         <meta name="viewport" content="width=device-width,initial-scale=1">
         <style type="text/css">
+	    @font-face{
+		font-family: "CMU";
+		src: url({% static 'cmunrm.otf' %}) format('opentype');
+	    }
             .nav {
                 padding-left: 0;
             }
@@ -46,6 +50,7 @@
 	    .header{
 		grid-area: header; display:grid;
 		padding-left: 10px;
+		font-family: CMU;
 	    }
 	    .header a{text-decoration:none; color: black;}
 	    .header h1 {
