--- a/patches/templates/patches/entry.html
+++ b/patches/templates/patches/entry.html
@@ -1,3 +1,11 @@
+
+<div class="entry">
+
+<div class="entry-top">
+<div>
+<img src = "{{entry.images.all.first.image.url}}" class="thumbnail">
+</div>
+<div>
 {{entry.name}} |
 <a href = {% url 'patches:detail' entry.id %}>{{entry.date}}</a><br>
 {% if entry.authors.all%}
@@ -8,18 +16,25 @@
 No Authors
 {% endif %}
 <br>
-<audio controls src="{{entry.recording.url}}"></audio><br>
+<audio controls src="{{entry.recording.url}}" style="width:100%"></audio><br>
 Tags: {% for tag in entry.tags.all %}
 <a href = "">{{tag.name}}</a> |
 {% endfor %}
 <br>
+</div>
+
+</div>
+<div>
 Description: {{entry.desc}}<br>
 
+Attachments:<br>
 {% if entry.attachments.all%}
 {% for attach in entry.attachments.all %}
-File: <a href="{{attach.file.url}}"> {{attach.filename}} </a><br>
+<a href="{{attach.file.url}}"> {{attach.filename}} </a><br>
 {% endfor %}
 {% else %}
 No Attachements
 {% endif %}
+</div>
 
+</div>
