--- a/patches/templates/patches/index.html
+++ b/patches/templates/patches/index.html
@@ -1,8 +1,13 @@
+{% extends "patches/base.html" %}
+
+{% block body %}
+
 {% if patch_entries %}
     {% for entry in patch_entries %}
     	{% include "patches/entry.html" with entry=entry %}
-	<hr/>
     {% endfor %}
 {% else %}
 Nothing
 {% endif %}
+
+{% endblock %}
