--- a/patches/templates/patches/index.html
+++ b/patches/templates/patches/index.html
@@ -1,7 +1,8 @@
 {% extends "patches/base.html" %}
 
 {% block body %}
-<div class="container">
+<div class="container entry-list">
+<h1>Audio Files</h1>
 
 {% if patch_entries %}
     {% for entry in patch_entries %}
