--- a/patches/static/patches/style.css
+++ b/patches/static/patches/style.css
@@ -1,6 +1,12 @@
+.entry-list{
+    border: 1px black;
+    border-style: none solid none solid;
+}
 .entry {
 	border: 1px black;
 	border-style: solid none solid none;
+	padding-top: 10px;
+	padding-bottom:10px;
 }
 .entry-top{
 	position:relative;
