--- a/patches/static/patches/style.css
+++ b/patches/static/patches/style.css
@@ -1,6 +1,8 @@
 .entry-list{
     border: 1px black;
     border-style: none solid none solid;
+    padding-left:0;
+    padding-right: 0;
 }
 .entry {
 	border: 1px black;
