--- a/patches/templates/patches/index.html
+++ b/patches/templates/patches/index.html
@@ -1,5 +1,9 @@
 {% extends "patches/base.html" %}
 
+{% block title %}
+Audio Files
+{% endblock %}
+
 {% block body %}
 <div class="container entry-list">
     <div class="col-auto">
