woah that's fancy

--- a/patches/static/patches/style.css
+++ b/patches/static/patches/style.css
@@ -10,6 +10,9 @@
 	padding-top: 10px;
 	padding-bottom:10px;
 }
+.entry:hover {
+	background-color: #cccccc;
+}
 .entry-top{
 	position:relative;
 	display:flex;
