--- a/patches/static/patches/style.css
+++ b/patches/static/patches/style.css
@@ -6,9 +6,13 @@
 }
 .entry {
 	border: 1px black;
-	border-style: solid none solid none;
+	border-style: none none solid none;
 	padding-top: 10px;
 	padding-bottom:10px;
+}
+.entry-header {
+	border: 1px black;
+	border-style: none none solid none;
 }
 .entry:hover {
 	background-color: #cccccc;
