--- a/patches/templates/patches/index.html
+++ b/patches/templates/patches/index.html
@@ -6,7 +6,7 @@ Audio Files
 
 {% block body %}
 <div class="container entry-list">
-    <div class="col-auto">
+    <div class="col-auto entry-header">
         <h1>Audio Files</h1>
     </div>
 
