--- a/patches/static/patches/style.css
+++ b/patches/static/patches/style.css
@@ -15,7 +15,7 @@
 	border-style: none none solid none;
 }
 .entry:hover {
-	background-color: #cccccc;
+	background-color: #dddddd;
 }
 .entry-date {
 	font-size: 0.75rem;
