This should make it a little more friendly w/o javascripts

--- a/patches/templates/patches/detail.html
+++ b/patches/templates/patches/detail.html
@@ -7,7 +7,7 @@ Audio File: {{patchentry.name}}
 
 {% block body %}
 
-{% include "patches/entry.html" with entry=patchentry %}
+{% include "patches/entry.html" with entry=patchentry collapse=False%}
 
 {% endblock %}
 	
