--- a/patches/templates/patches/index.html
+++ b/patches/templates/patches/index.html
@@ -13,7 +13,7 @@ Audio Files
 
                 <div>
                 {% if author.author.author_image %}
-                <img src="{{author.author.author_image.url}}" width=256 />
+                <img src="{{author.author.author_image.url}}" class="author-thumbnail" />
                 {% endif %}
                 </div>
 
