--- a/patches/static/patches/style.css
+++ b/patches/static/patches/style.css
@@ -36,6 +36,7 @@
 .adaptive-thumbnail {
 	margin-left:10px;
 	margin-right:10px;
+	min-height:100px;
 	height: 100%;
 	width: 150px;
 	object-fit:cover;
