--- a/tttweb/templates/base.html
+++ b/tttweb/templates/base.html
@@ -17,9 +17,18 @@
                 list-style-type: none;
                 padding-right: 0px;
 		padding-right: 10px;
-
+		border-bottom: 1px dashed white;
+		border-left: 1px dashed white;
+		padding-left: 2px;
             }
-	    .nav a:link{color: white;}
+	    .nav ul{
+		padding-left:1em;
+            }
+	    .nav a:link{
+		    color: white;
+		    text-decoration:none;
+		    
+		}
 	    .nav a:visited{color: white;}    
 	    .child.selected a:link{color: #00ff00;}
 	    .child.selected a:visited{color:#00ff00;}    
