slightly more better

--- a/tttweb/templates/base.html
+++ b/tttweb/templates/base.html
@@ -16,18 +16,17 @@
                 display: block;
                 list-style-type: none;
                 padding-right: 0px;
-		padding-right: 10px;
-		border-bottom: 1px dashed white;
-		border-left: 1px dashed white;
-		padding-left: 2px;
+                padding-right: 10px;
             }
 	    .nav ul{
-		padding-left:1em;
+            padding-left:1em;
             }
 	    .nav a:link{
 		    color: white;
 		    text-decoration:none;
-		    
+			border-bottom: 1px solid white;
+            border-left: 1px solid white;
+            padding-left: 2px;
 		}
 	    .nav a:visited{color: white;}    
 	    .child.selected a:link{color: #00ff00;}
