--- a/tttweb/templates/base.html
+++ b/tttweb/templates/base.html
@@ -16,7 +16,6 @@
                 display: block;
                 list-style-type: none;
                 padding-right: 0px;
-                padding-right: 10px;
             }
 	    .nav ul{
             padding-left:1em;
@@ -27,6 +26,7 @@
 			border-bottom: 1px solid white;
             border-left: 1px solid white;
             padding-left: 2px;
+            margin-right: 1em;
 		}
 	    .nav a:visited{color: white;}    
 	    .child.selected a:link{color: #00ff00;}
