--- a/tttweb/templates/base.html
+++ b/tttweb/templates/base.html
@@ -91,6 +91,34 @@
         body {
             margin: 0px;
         }
+
+
+        .menu_hide{
+            display: none;
+        }
+        .menu_show{
+            display:block;
+        }
+        .expando {
+            cursor: pointer;
+            user-select: none;
+        }
+        .expando-expanded::before{
+            transform:rotate(90deg);
+        }
+        .expando::before {
+            content: "\25B6";
+            color: white;
+            display: inline-block;
+            margin-right: 1px;
+            font-size: 0.75em;
+            width:1em
+        }
+        .nospando::before{
+            visibility: hidden;
+        }
+
+
         </style>
         {% render_block "css" %}
     </head>
@@ -101,7 +129,7 @@
         <div class ="sidebar-main">
             <ul class="nav">
             
-            {% show_menu_below_id "home" 0 100 100 100 %}
+            {% show_menu_below_id "home" 0 100 100 100 "menu.html" %}
             
             </ul>
         </div>
