hack to fix expandy javascript inclusion

--- a/tttweb/templates/base.html
+++ b/tttweb/templates/base.html
@@ -129,7 +129,7 @@
         <div class ="sidebar-main">
             <ul class="nav">
             
-            {% show_menu_below_id "home" 0 100 100 100 "menu.html" %}
+            {% show_menu_below_id "home" 0 100 100 100 "menu.html" "root" %}
             
             </ul>
         </div>
