--- a/tttweb/templates/base.html
+++ b/tttweb/templates/base.html
@@ -99,6 +99,7 @@
         .menu_show{
             display:block;
         }
+        /*.nav li:hover > ul{display:block;}*/
         .expando {
             cursor: pointer;
             user-select: none;
