slightly nicer paragraph spacing

--- a/tttweb/templates/base.html
+++ b/tttweb/templates/base.html
@@ -9,6 +9,12 @@
             font-family: "CMU";
             src: url({% static 'cmunrm.otf' %}) format('opentype');
         }
+
+        p {
+            margin-top: 0.5em;
+            margin-bottom: 0.5em;
+        }
+
         .nav {
             padding-left: 0;
         }
