--- a/patches/static/patches/style.css
+++ b/patches/static/patches/style.css
@@ -1,3 +1,17 @@
+p {
+    margin-top: 0.5em;
+    margin-bottom: 0.5em;
+}
+li {
+    margin-top: 0;
+    margin-bottom: 0;
+}
+li > p {
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+
 .entry-list{
     border: 1px black;
     border-style: none solid none solid;
