--- a/patches/static/patches/style.css
+++ b/patches/static/patches/style.css
@@ -76,3 +76,40 @@ li > p {
 	font-weight:bold;
 }
 
+
+/* Tag Tooltips */
+
+.tooltiplink {
+  position: relative;
+  display: inline-block;
+}
+
+.tooltiptext {
+  visibility: hidden;
+  width: 120px;
+  background-color: #000;
+  color: #fff;
+  text-align: center;
+  padding: 5px 0;
+  position: absolute;
+  z-index: 1;
+  bottom: 125%;
+  left: 50%;
+  margin-left: -60px;
+}
+
+.tooltiplink .tooltiptext::after {
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  margin-left: -5px;
+  border-width: 5px;
+  border-style: solid;
+  border-color: #000 transparent transparent transparent;
+}
+
+.tooltiplink:hover .tooltiptext {
+  visibility: visible;
+  opacity: 1;
+}
