--- a/patches/static/patches/style.css
+++ b/patches/static/patches/style.css
@@ -80,35 +80,27 @@ li > p {
 /* Tag Tooltips */
 
 .tooltiplink {
-  position: relative;
+/*  position: relative;*/
   display: inline-block;
 }
 
 .tooltiptext {
+  max-width: calc(100% - 8px);
   visibility: hidden;
-  width: 120px;
-  background-color: #000;
-  color: #fff;
-  text-align: center;
-  padding: 5px 0;
+  width:max-content;
+  overflow:visible;
+  border: 1px solid black;
+  background-color: #fff;
+  color: #000;
+  text-align: left;
   position: absolute;
   z-index: 1;
-  bottom: 125%;
-  left: 50%;
-  margin-left: -60px;
+  bottom: 1.5em;
+  left: 0;
+  padding-left:0.5em;
+  padding-right:0.5em;
+/*  margin-left: -50%;*/
 }
-
-.tooltiplink .tooltiptext::after {
-  content: "";
-  position: absolute;
-  top: 100%;
-  left: 50%;
-  margin-left: -5px;
-  border-width: 5px;
-  border-style: solid;
-  border-color: #000 transparent transparent transparent;
-}
-
 .tooltiplink:hover .tooltiptext {
   visibility: visible;
   opacity: 1;
