--- a/patches/static/patches/style.css
+++ b/patches/static/patches/style.css
@@ -13,6 +13,7 @@ li > p {
 
 
 .entry-list{
+    max-width: 90%;
     border: 1px black;
     border-style: none solid none solid;
     padding-left:0;
