turn tag dividers into divs instead of |

--- a/patches/static/patches/style.css
+++ b/patches/static/patches/style.css
@@ -80,6 +80,12 @@ li > p {
 
 /* Tag Tooltips */
 
+.tagdiv {
+    width:1px;
+    background: black;
+    margin: 0.25em;
+}
+
 .tooltiplink {
 /*  position: relative;*/
   display: inline-block;
