--- a/patches/templates/patches/entry.html
+++ b/patches/templates/patches/entry.html
@@ -42,7 +42,7 @@
         <a href = "{{request.path}}?{%if author%}author={{author.author.display_name}}{%endif%}tags={%if tags%}{{tags}}{%endif%}{%if not tag.name in taglist%}{%if tags%},{%endif%}{{tag.name}}{%endif%}" class="tooltiplink">
             {{tag.name}}<div class="tooltiptext">{{tag.name}}: {{tag.summary}}</div>
         </a>
-        {% if not forloop.last%}&#xff5c;{% endif %}
+        {% if not forloop.last%}<div class="tagdiv"></div>{% endif %}
         {% endfor %}
         {% else %}
         No Tags
